test_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
  namespace: default
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      name: istio-chaos-deployment
      namespace: default
      labels:
        app: httpbin
    spec:
      containers:
      - args:
        - --port
        - "80"
        - --path
        - "Ingress_HTTP"
        - --pod-name
        - "$(POD_NAME)"
        command:
        - ./chaos
        image: ghcr.io/zawachte/istio-chaos:latest
        imagePullPolicy: Always
        name: ingress
        ports:
        - containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
